// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with packets 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        iPad
         - 
        05/02/2020
      </Text>
      <Text>
        Apple Pencil
         - 
        07/02/2020
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly without packets 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;
